--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,11 +12,19 @@ website:
     search: true
     left: 
       - href: index.qmd
-        text: Homepage
+        text: Homepage/Dashboard
+      - href: report.qmd
+        text: Report
+      - text: Technical Details
+        menu:
+          - href: data_cleaning.qmd
+            text: Data Cleaning
+          - href: eda.qmd
+            text: Exploratory Data Analysis
+          - href: llm-usage.qmd
+            text: "LLM Usage Log"
       - href: references.qmd
         text: References
-      - href: llm-usage.qmd
-        text: "LLM Usage Log"
       - href: appendix.qmd
         text: Appendix
 
