--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,12 +12,12 @@ website:
     search: true
     left: 
       - href: index.qmd
-        text: Homepage/Dashboard
+        text: Home
       - href: report.qmd
         text: Report
       - text: Technical Details
         menu:
-          - href: data_cleaning.qmd
+          - href: data_cleaning.ipynb
             text: Data Cleaning
           - href: eda.qmd
             text: Exploratory Data Analysis
@@ -30,7 +30,9 @@ website:
 
 format:
   html:
-    theme: lumen
+    theme: 
+      - sandstone
+      - styles.scss
     page-layout: full
     toc: true
     toc-location: left
