--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,11 @@ website:
               text: "LLM Usage Log"
         - href: references.qmd
           text: References
+      right:
+      - icon: github
+        href: "https://github.com/DSAN-Viz2025/DSAN-Viz2025.github.io.git"
+      - text: "Back to Portfolio"
+        href: "https://crg123.georgetown.domains/"
 
   sidebar:
     search: true
